# client

./: .gitignore  CMakeLists.txt  apicommunicator.cpp  apicommunicator.h  client.pro  connectwidget.cpp  connectwidget.h  mainwindow.cpp  mainwindow.h  requests.cpp  requests.h  summarywidget.cpp  summarywidget.h
